--- a/alphabet-soup/.vscode/launch.json
+++ b/alphabet-soup/.vscode/launch.json
@@ -5,10 +5,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: archivo actual",
+            "name": "Python: Main File",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/alphabet-soup/main.py",
+            "program": "${workspaceFolder}/main.py",
             "console": "integratedTerminal",
             "justMyCode": true
         }
